content/backend/dev/k8s/migrations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lncdapp-migrations
  namespace: lncdapp-dev
  labels:
    app: lncdapp-migrations
spec:
  selector:
    matchLabels:
      app: lncdapp-migrations
  replicas: 1
  template:
    metadata:
      labels:
        app: lncdapp-migrations
    spec:
      containers:
      - name: migrations
        image: lncdapp-migrations
        resources:
          requests:
            cpu: '500m'
            memory: '200Mi'
          limits:
            cpu: '1'
            memory: '1Gi'
