content/backend/dev/k8s/mainapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lncdapp-mainapp
  namespace: lncdapp-dev
  labels:
    app: lncdapp-mainapp
spec:
  selector:
    matchLabels:
      app: lncdapp-mainapp
  replicas: 1
  template:
    metadata:
      labels:
        app: lncdapp-mainapp
    spec:
      containers:
      - name: api
        image: lncdapp-mainapp
        ports:
        - containerPort: 8080
        - containerPort: 22
        resources:
          requests:
            cpu: '1'
            memory: '200Mi'
          limits:
            cpu: '4'
            memory: '5Gi'
---
apiVersion: v1
kind: Service
metadata:
  name: lncdapp-mainapp-svc
  namespace: lncdapp-dev
  labels:
    app: lncdapp-mainapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: lncdapp-mainapp
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: lncdapp-path-strip
  namespace: lncdapp-dev
spec:
  stripPrefix:
    prefixes:
    - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lncdapp-mainapp-ingress
  namespace: lncdapp-dev
spec:
  rules:
  - host: lncdapp.local.lncd.pl
    http:
      paths:
      - path: /api
        backend:
          service:
            name: lncdapp-mainapp-svc
            port:
              number: 80
        pathType: ImplementationSpecific
